# LLMUDClient

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: session-end.md  session-start.md
docs/: AI_SYSTEM_DESIGN.md  ARCHITECTURE.md  CLAUDE_CODE_GUIDE.md  DEV_PROCESS.md  INDEX.md  INSTITUTION_DESIGN.md  REQUIREMENTS.md  VISION.md  WORLD_DESIGN.md
docs/research/: agent_orchestration.md  claude_code_patterns.md  tech_stack_review.md  ui_research.md
docs/scratchpad/: README.md
