[project]
name = "llmud"
version = "0.1.0"
description = "LLM-powered MUD client and cognitive scaffolding research platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
